added ui ux services html with new icons

--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -16,6 +16,14 @@
    <script src="js/bootstrap.min.js"></script>
    <link rel="stylesheet" href="css/mainStyle.css" />
    <script type="text/javascript" src="js/mainScript.js"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTK9YBDECP"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-PTK9YBDECP');
+   </script>
 </head>
 
 <body>
@@ -73,8 +81,8 @@
    </header>
    <div id="myCarousel" class="carousel slide-cancel" data-ride="carousel">
       <div class="item ">
-         <a href="index.html"> <img src="/images/UserExperience_Banner.png" class="hidden-xs resize-inner-banner"
-               alt="Digital Banking Banner"> <img src="/images/UserExperience_Banner.png" class="visible-xs"
+         <a href="index.html"> <img src="./images/UserExperience_Banner.png" class="hidden-xs resize-inner-banner"
+               alt="Digital Banking Banner"> <img src="./images/UserExperience_Banner.png" class="visible-xs"
                alt="Digital Banking Banner"> </a>
       </div>
    </div>
@@ -105,25 +113,25 @@
          <div class="row defban">
             <h2 class="text-danger text-center font21 mb3 mt2">Our UI Services</h2>
             <div class="col-md-6 col-sm-12">
-               <div class="defban-wrapper defban3">
+               <div class="ors-wrapper uiicon1 uiuxwrapper">
                   <p>Expertise in delivering <strong class="text-blue">ReactJS and NextJs and Angular</strong>.</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="defban-wrapper defban2">
+               <div class="ors-wrapper uiicon2">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>Ability to handle <strong class="text-blue">AMP and PWA compliant front-end</strong>. </p>
+                  <p>Ability to handle <strong class="text-blue">AP and PWA compliant front-end</strong>. </p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="defban-wrapper defban3">
+               <div class="ors-wrapper uiicon3">
                   <p>Front-end <strong class="text-blue">optimization</strong> of React and NodeJS.</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="defban-wrapper defban2">
+               <div class="ors-wrapper uiicon4">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
                   <p>Implemented <strong class="text-blue">caching strategies </strong> using Varnish and Redis. </p>
                </div>
@@ -136,23 +144,23 @@
          <h2 class="text-danger text-center mb3 mt2 font21">Our UX Services</h2>
          <div class="row">
             <div class="col-md-6 col-sm-12">
-               <div class="ors-wrapper ors1">
+               <div class="ors-wrapper uxicon1">
                   <p class="">We are a team of well-trained, experienced consultants providing User and Market Research
                   </p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="defban-wrapper defban3">
+               <div class="ors-wrapper uxicon2">
                   <p>Modernization</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="ors-wrapper ors3">
+               <div class="ors-wrapper uxicon4">
                   <p class="">Interactions & UI Design</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="ors-wrapper ors4">
+               <div class="ors-wrapper uxicon4">
                   <p class="">Usability Testing</p>
                </div>
             </div>
