--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -145,7 +145,8 @@
          <div class="row">
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon1">
-                  <p class="">We are a team of well-trained, experienced consultants providing User and Market Research
+                  <p class="">We are a team of well-trained, experienced consultants providing <strong
+                        class="text-blue">User and Market Research</strong>
                   </p>
                </div>
             </div>
