added ui ux services html

--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -65,7 +65,7 @@
                         </li>
                         <li>
                            <a href="ui-ux-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png"
-                                 class="custom-image-dropdown-nav"> UI UX Services</a>
+                                 class="custom-image-dropdown-nav"> Front End Services</a>
                         </li>
                      </ul>
                   </li>
@@ -89,20 +89,23 @@
    <div class="container-fluid">
       <div class="row">
          <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a
-               class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">UI
-               / UX Services </span> </nav>
+               class="breadcrumb-item" href="index.html">Lines of Business </a>
+            <span class="breadcrumb-item active"> Front End Services </span>
+         </nav>
       </div>
    </div>
    <section class="banking-description text-center">
       <div class="container">
          <div class="row">
             <div class="col-xs-12">
-               <h2 class="text-danger font32 mt2 mb3">UI UX Services</h2>
-               <h4 class="text-blue font19">With over a decade of rich experience, we can help you migrate to a
-                  Headless.</h4>
-               <p class="mb3"> We work with
+               <h2 class="text-danger font32 mt2 mb3">Front End Services</h2>
+               <h4 class="text-blue font19">
+                  <!-- With over a decade of rich experience, we can help you migrate to aHeadless. -->
+                  We work with
                   enhancing your Customer experience by providing UI services across commerce
                   and banking domains
+               </h4>
+               <p class="mb3">
                </p>
             </div>
          </div>
@@ -114,26 +117,26 @@
             <h2 class="text-danger text-center font21 mb3 mt2">Our UI Services</h2>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon1 uiuxwrapper">
-                  <p>Expertise in delivering <strong class="text-blue">ReactJS and NextJs and Angular</strong>.</p>
+                  <p>Headless Architecture</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon2">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>Ability to handle <strong class="text-blue">AP and PWA compliant front-end</strong>. </p>
+                  <p>ReactJS and NextJs and Angular Solutions.</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon3">
-                  <p>Front-end <strong class="text-blue">optimization</strong> of React and NodeJS.</p>
+                  <p>AP and PWA compliant front-end.</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon4">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>Implemented <strong class="text-blue">caching strategies </strong> using Varnish and Redis. </p>
+                  <p>Front-end optimization</p>
                </div>
             </div>
          </div>
@@ -145,8 +148,7 @@
          <div class="row">
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon1">
-                  <p class="">We are a team of well-trained, experienced consultants providing <strong
-                        class="text-blue">User and Market Research</strong>
+                  <p class="">User and Market Research
                   </p>
                </div>
             </div>
@@ -156,7 +158,7 @@
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
-               <div class="ors-wrapper uxicon4">
+               <div class="ors-wrapper uxicon3">
                   <p class="">Interactions & UI Design</p>
                </div>
             </div>
