--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -117,7 +117,7 @@
             <h2 class="text-danger text-center font21 mb3 mt2">Our UI Services</h2>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon1 uiuxwrapper">
-                  <p>Headless Architecture</p>
+                  <p>Headless Architecture.</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
@@ -136,7 +136,7 @@
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon4">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>Front-end optimization</p>
+                  <p>Front-end optimization.</p>
                </div>
             </div>
          </div>
@@ -148,23 +148,23 @@
          <div class="row">
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon1">
-                  <p class="">User and Market Research
+                  <p class="">User and Market Research.
                   </p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon2">
-                  <p>Modernization</p>
+                  <p>Modernization.</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon3">
-                  <p class="">Interactions & UI Design</p>
+                  <p class="">Interactions & UI Design.</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon4">
-                  <p class="">Usability Testing</p>
+                  <p class="">Usability Testing.</p>
                </div>
             </div>
             <!-- <div class="col-md-6 col-sm-12">
