added ui ux services html v5

--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -101,9 +101,7 @@
                <h2 class="text-danger font32 mt2 mb3">Front End Services</h2>
                <h4 class="text-blue font19">
                   <!-- With over a decade of rich experience, we can help you migrate to aHeadless. -->
-                  We work with
-                  enhancing your Customer experience by providing UI services across commerce
-                  and banking domains
+                  Enhancing your Customer experience by providing UI services across commerce and banking domains
                </h4>
                <p class="mb3">
                </p>
@@ -117,26 +115,26 @@
             <h2 class="text-danger text-center font21 mb3 mt2">Our UI Services</h2>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon1 uiuxwrapper">
-                  <p>Headless Architecture.</p>
+                  <p>Headless Architecture</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon2">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>ReactJS and NextJs and Angular Solutions.</p>
+                  <p>ReactJS, NextJs and Angular Solutions</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon3">
-                  <p>AP and PWA compliant front-end.</p>
+                  <p>AP and PWA compliant front-end</p>
                   <!-- <p>Specialist <strong class="text-danger">Oracle</strong> <strong class="text-blue"> Gold Partner</strong> for their Digital Banking solutions. </p> -->
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uiicon4">
                   <!-- <p>100% track record in delivering <strong class="text-blue">successful</strong> and <strong class="text-blue">on-budget projects</strong>.</p> -->
-                  <p>Front-end optimization.</p>
+                  <p>Front-end optimization</p>
                </div>
             </div>
          </div>
@@ -148,7 +146,7 @@
          <div class="row">
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon1">
-                  <p class="">User and Market Research.
+                  <p class="">User and Market Research
                   </p>
                </div>
             </div>
@@ -159,12 +157,12 @@
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon3">
-                  <p class="">Interactions & UI Design.</p>
+                  <p class="">Interactions & UI Design</p>
                </div>
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper uxicon4">
-                  <p class="">Usability Testing.</p>
+                  <p class="">Usability Testing</p>
                </div>
             </div>
             <!-- <div class="col-md-6 col-sm-12">
