Added newer images for all sections v1

--- a/resources.html
+++ b/resources.html
@@ -2,77 +2,98 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc</title>
- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
- <meta name="description" content="The Case studies reflect our deep knowledge and and passion for the solutions we deliver combined with the rich features set and out of the box functionalities offered based on changing client needs.">
- <meta http-equiv="cache-control" content="max-age=518400">
- <meta http-equiv="pragma" content="public">
- <link rel="stylesheet" href="css/bootstrap.min.css">
- <link rel="stylesheet" href="css/style.css" />
- <link rel="stylesheet" href="css/mainStyle.css" />
- <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
- <script type="text/javascript" src="js/bootstrap.min.js"></script>
- <script type="text/javascript" src="js/mainScript.js"></script>
+   <title>Logixal Inc</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+   <meta name="description"
+      content="The Case studies reflect our deep knowledge and and passion for the solutions we deliver combined with the rich features set and out of the box functionalities offered based on changing client needs.">
+   <meta http-equiv="cache-control" content="max-age=518400">
+   <meta http-equiv="pragma" content="public">
+   <link rel="stylesheet" href="css/bootstrap.min.css">
+   <link rel="stylesheet" href="css/style.css" />
+   <link rel="stylesheet" href="css/mainStyle.css" />
+   <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="js/mainScript.js"></script>
 </head>
 
 <body id="resources-page">
- <header>
-  <div class="container-fluid staticnav">
-   <nav class="navbar">
-    <div class="navbar-header">
-     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-     <a href="index.html" class="navbar-brand"> <img src="images/Logixal-logo-white.png" width="" alt="Logixal" class="default-logo hidden-xs"> </a>
-     <a href="index.html" class="navbar-header-logo visible-xs"> <img src="images/Logixal-logo-default.png" alt="Logixal Logo"> </a>
-    </div>
-    <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
-     <ul class="nav navbar-nav">
-      <li class="dropdown-submenu"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">LINES OF BUSINESS <span class="caret"></span></a>
-       <ul class="dropdown-menu">
-        <li>
-         <a href="digital-banking-solutions.html"> <img src="images/Dropdown-list/01a-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Banking Solutions</a>
-        </li>
-        <li>
-         <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
-        </li>
-        <li>
-        <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">AI/ML Driven Solutions</a> 
-        </li>
-        <li>
-         <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
-        </li>
-       </ul>
-      </li>
-      <li><a href="accelerators-widget.html">ACCELERATORS &amp; WIDGETS</a></li>
-      <li><a href="about-us.html">ABOUT US</a></li>
-      <li><a href="resources.html">RESOURCES</a></li>
-      <li><a href="join-logixal.html" class="ourteam hidden-sm">WORK WITH US <img src="images/workwithus-arrow.png" alt=" Work With Us Arrow"></a></li>
-     </ul>
-    </div>
-   </nav>
-  </div>
- </header>
- <div id="myCarousel" class="carousel slide-cancel" data-ride="carousel">
-  <div class="item ">
-   <a href="index.html#accelerators"> <img src="images\OurResources-banner-with-shadow.jpg" class="hidden-xs resize-inner-banner" alt="Resources Banner"> <img src="images\OurResources-banner-without-shadow.jpg" class="visible-xs" alt="Resources Banner"> </a>
-  </div>
- </div>
- <div class="container-fluid">
-  <div class="row">
-   <nav class="breadcrumb breadcrumb-bg-color font14 font10"> <a class="breadcrumb-item" href="index.html">Home</a> <span class="breadcrumb-item active"> Resources </span> </nav>
-  </div>
- </div>
- <section class="banking-description text-center">
-  <div class="container">
-   <div class="row">
-    <div class="col-xs-12">
-     <p class="text-blue font19 mb3"> </p>
-    </div>
+   <header>
+      <div class="container-fluid staticnav">
+         <nav class="navbar">
+            <div class="navbar-header">
+               <button type="button" class="navbar-toggle" data-toggle="collapse"
+                  data-target="#example-navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span
+                     class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+               <a href="index.html" class="navbar-brand"> <img src="images/Logixal-logo-white.png" width=""
+                     alt="Logixal" class="default-logo hidden-xs"> </a>
+               <a href="index.html" class="navbar-header-logo visible-xs"> <img src="images/Logixal-logo-default.png"
+                     alt="Logixal Logo"> </a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
+               <ul class="nav navbar-nav">
+                  <li class="dropdown-submenu"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">LINES OF BUSINESS <span class="caret"></span></a>
+                     <ul class="dropdown-menu">
+                        <li>
+                           <a href="digital-banking-solutions.html"> <img
+                                 src="images/Dropdown-list/01a-lineofbusiness.png" class="custom-image-dropdown-nav">
+                              Digital Banking Solutions</a>
+                        </li>
+                        <li>
+                           <a href="digital-commerce-solutions.html"> <img
+                                 src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav">
+                              Digital Commerce Solutions</a>
+                        </li>
+                        <li>
+                           <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png"
+                                 class="custom-image-dropdown-nav">AI/ML Driven Solutions</a>
+                        </li>
+                        <li>
+                           <a href="application-management-services.html"> <img
+                                 src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav">
+                              Application Management Services</a>
+                        </li>
+                        <li>
+                           <a href="frontend-services.html"> <img src="images/Dropdown-list/01e-lineofbusiness.png"
+                                 class="custom-image-dropdown-nav"> Front End Services</a>
+                        </li>
+                     </ul>
+                  </li>
+                  <li><a href="accelerators-widget.html">ACCELERATORS &amp; WIDGETS</a></li>
+                  <li><a href="about-us.html">ABOUT US</a></li>
+                  <li><a href="resources.html">RESOURCES</a></li>
+                  <li><a href="join-logixal.html" class="ourteam hidden-sm">WORK WITH US <img
+                           src="images/workwithus-arrow.png" alt=" Work With Us Arrow"></a></li>
+               </ul>
+            </div>
+         </nav>
+      </div>
+   </header>
+   <div id="myCarousel" class="carousel slide-cancel" data-ride="carousel">
+      <div class="item ">
+         <a href="index.html#accelerators"> <img src="images\OurResources-banner-with-shadow.png"
+               class="hidden-xs resize-inner-banner" alt="Resources Banner"> <img
+               src="images\OurResources-banner-with-shadow.png" class="visible-xs" alt="Resources Banner"> </a>
+      </div>
    </div>
-  </div>
- </section>
- <br>
- <section id="contentOne">
-  <!-- <div class="container">
+   <div class="container-fluid">
+      <div class="row">
+         <nav class="breadcrumb breadcrumb-bg-color font14 font10"> <a class="breadcrumb-item"
+               href="index.html">Home</a> <span class="breadcrumb-item active"> Resources </span> </nav>
+      </div>
+   </div>
+   <section class="banking-description text-center">
+      <div class="container">
+         <div class="row">
+            <div class="col-xs-12">
+               <p class="text-blue font19 mb3"> </p>
+            </div>
+         </div>
+      </div>
+   </section>
+   <br>
+   <section id="contentOne">
+      <!-- <div class="container">
    <div class="row topBuffer" id="oracleCom">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
      <a href="pdf/case-study-3.pdf" target="_blank"><img src="pdf/case-study-3.jpg" class="img-responsive center-block" alt="Oracle Web Commerce Platform Upgrade"></a>
@@ -92,96 +113,99 @@
     </div>
    </div>
   </div> -->
- </section>
- <hr>
- <div class="copyright">
-  <div class="container">
-   <div class="row">
-    <div class="col-md-5 col-sm-6 col-xs-12 hidden-xs hidden-sm">
-     <ul class="footer-links">
-      <a href="accelerators-widget.html"> <small>
-                           <li>Accelerators &amp; Widgets | </li>
-                        </small> </a>
-      <a href="about-us.html"> <small>
-                           <li>About Us |</li>
-                        </small> </a>
-      <a href="resources.html"> <small>
-                           <li>Resources |</li>
-                        </small> </a>
-      <a href="join-logixal.html" class="small-text"> <small>
-                           <li>Work With Us</li>
-                        </small> </a>
-     </ul>
-    </div>
-    <div class="col-md-3 col-sm-6 col-xs-12">
-     <div class="footercustomcolor inlinebox">
-      <p class="visible-md visible-lg"><small>Follow Us On: &nbsp; &nbsp; </small></p>
-      <div class="social-icons">
-       <a href="https://www.facebook.com/logixal" target="_blank"><img src="images/04a-social-icon.png" alt="Facebook"></a>
-       <a href="mailto:info@logixal.com"><img src="images/04d-email-icon.png" alt="Mail Us"></a>
-       <a href="https://www.linkedin.com/company/logixal-inc" target="_blank"><img src="images/04c-social-icon.png" alt="Linkedin"></a>
+   </section>
+   <hr>
+   <div class="copyright">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-5 col-sm-6 col-xs-12 hidden-xs hidden-sm">
+               <ul class="footer-links">
+                  <a href="accelerators-widget.html"> <small>
+                        <li>Accelerators &amp; Widgets | </li>
+                     </small> </a>
+                  <a href="about-us.html"> <small>
+                        <li>About Us |</li>
+                     </small> </a>
+                  <a href="resources.html"> <small>
+                        <li>Resources |</li>
+                     </small> </a>
+                  <a href="join-logixal.html" class="small-text"> <small>
+                        <li>Work With Us</li>
+                     </small> </a>
+               </ul>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+               <div class="footercustomcolor inlinebox">
+                  <p class="visible-md visible-lg"><small>Follow Us On: &nbsp; &nbsp; </small></p>
+                  <div class="social-icons">
+                     <a href="https://www.facebook.com/logixal" target="_blank"><img src="images/04a-social-icon.png"
+                           alt="Facebook"></a>
+                     <a href="mailto:info@logixal.com"><img src="images/04d-email-icon.png" alt="Mail Us"></a>
+                     <a href="https://www.linkedin.com/company/logixal-inc" target="_blank"><img
+                           src="images/04c-social-icon.png" alt="Linkedin"></a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
+               <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights
+                     reserved</small> </p>
+            </div>
+         </div>
       </div>
-     </div>
-    </div>
-    <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
-    </div>
-   </div>
-  </div>
- </div> <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
- <script src="js/commonJs.js"></script>
- <script>
-  (function (i, s, o, g, r, a, m) {
-   i['GoogleAnalyticsObject'] = r;
-   i[r] = i[r] || function () {
-    (i[r].q = i[r].q || []).push(arguments)
-   }, i[r].l = 1 * new Date();
-   a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-   a.async = 1;
-   a.src = g;
-   m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-66137692-1', 'auto');
-  ga('send', 'pageview');
- </script>
- <script>
-  jQuery(document).scroll(function () {
-   if (jQuery(this).scrollTop() > 300) {
-    jQuery('.staticnav').css({
-     "background": "white"
-    });
-    jQuery('.staticnav').css({
-     "box-shadow": " 0px  0px 10px   rgba(31, 31, 33, 0.12) "
-    });
-    jQuery('.staticnav').css({
-     "height": "10%"
-    });
-    jQuery('a').css({
-     "color": "black"
-    });
-    jQuery('.dropdown-menu>li>a').css({
-     "color": "black"
-    });
-    jQuery('.default-logo').attr('src', 'images/Logixal-logo-default.png')
-   }
-   else {
-    jQuery('.staticnav').css({
-     "background": "transparent"
-    });
-    jQuery('.staticnav').css({
-     "box-shadow": " none"
-    });
-    jQuery('a').css({
-     "color": "white"
-    });
-    jQuery('.dropdown-menu>li>a').css({
-     "color": "black"
-    });
-    // jQuery('.navbar-nav>li>a').css({"color":"black"});
-    jQuery('.default-logo').attr('src', 'images/Logixal-logo-white.png')
-   }
-  });
- </script>
+   </div> <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
+   <script src="js/commonJs.js"></script>
+   <script>
+      (function (i, s, o, g, r, a, m) {
+         i['GoogleAnalyticsObject'] = r;
+         i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+         }, i[r].l = 1 * new Date();
+         a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+         a.async = 1;
+         a.src = g;
+         m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      ga('create', 'UA-66137692-1', 'auto');
+      ga('send', 'pageview');
+   </script>
+   <script>
+      jQuery(document).scroll(function () {
+         if (jQuery(this).scrollTop() > 300) {
+            jQuery('.staticnav').css({
+               "background": "white"
+            });
+            jQuery('.staticnav').css({
+               "box-shadow": " 0px  0px 10px   rgba(31, 31, 33, 0.12) "
+            });
+            jQuery('.staticnav').css({
+               "height": "10%"
+            });
+            jQuery('a').css({
+               "color": "black"
+            });
+            jQuery('.dropdown-menu>li>a').css({
+               "color": "black"
+            });
+            jQuery('.default-logo').attr('src', 'images/Logixal-logo-default.png')
+         }
+         else {
+            jQuery('.staticnav').css({
+               "background": "transparent"
+            });
+            jQuery('.staticnav').css({
+               "box-shadow": " none"
+            });
+            jQuery('a').css({
+               "color": "white"
+            });
+            jQuery('.dropdown-menu>li>a').css({
+               "color": "black"
+            });
+            // jQuery('.navbar-nav>li>a').css({"color":"black"});
+            jQuery('.default-logo').attr('src', 'images/Logixal-logo-white.png')
+         }
+      });
+   </script>
 </body>
 
 </html>
