Added newer images for all sections v2

--- a/about-us.html
+++ b/about-us.html
@@ -80,7 +80,7 @@
       <div class="item ">
          <a href="index.html#accelerators"> <img src="images\05-Aboutus-banner-with-text.png"
                class="hidden-xs resize-inner-banner" alt="Business Commerce Platform Accelerator"> <img
-               src="images\05-Aboutus-banner with text.png" class="visible-xs"
+               src="images\05-Aboutus-banner-with-text.png" class="visible-xs"
                alt="Business Commerce Platform Accelerator"> </a>
       </div>
    </div>
