--- a/digital-banking-solutions.html
+++ b/digital-banking-solutions.html
@@ -83,8 +83,8 @@
       <div class="item ">
          <a href="index.html"> <img src="images/03b-Digitalbanking-banner-with-shadow.jpg"
                class="hidden-xs resize-inner-banner" alt="Digital Banking Banner"> <img
-               src="images/03b-Digitalbanking-banner-without-shadow.jpg" class="visible-xs"
-               alt="Digital Banking Banner"> </a>
+               src="images/03b-Digitalbanking-banner-with-shadow.jpg" class="visible-xs" alt="Digital Banking Banner">
+         </a>
       </div>
    </div>
    <div class="container-fluid">
