Added newer images for all sections v3

--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <p class="company-title-bold-font"><strong>Logixal Solutions Private Limited</strong> </p>
-                <p>88 Wood Street,
-                  <br> <strong>London </strong> EC2V 7RS, <strong>UK.</strong>
+                <p>126-134, Baker Street,
+                  <br> <strong>London </strong> W1U 6U, <strong>UK.</strong>
                   <br> Phone: +44 783 446 1261
                 </p>
               </div>
