Added newer images for all sections v4

--- a/about-us.html
+++ b/about-us.html
@@ -196,7 +196,7 @@
          <h2 class="text-danger text-center font28 mt2 mb3">What makes us Different</h2>
          <br>
          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 oracle-logixal"> <img src="images/whatmakes-different-image.jpg"
+            <div class="col-xs-12 col-sm-6 col-md-4 oracle-logixal"> <img src="images/WhatMakesUsDifferent.png"
                   class="img-responsive center-block oracle-logixal" alt=""> </div>
             <br>
             <div class="col-xs-12 col-sm-6 col-md-8 oracle-logixal">
