--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="item">
         <a href="index.html#accelerators"> <img src="images/homebanners/home_banner01_wt.png" class=""
             alt="Logixal Banner">
-          <div class="member-logos"><img src="images/01bNasscomMember.png" class="img-responsive center-block"
+          <div class="member-logos"><img src="images/01bNasscomMember.png" class="image-lob center-block"
               alt="Nasscom Member"> </div>
         </a>
       </div>
@@ -100,19 +100,19 @@
       <h3 class="font21 mt2 mb3"> Our <strong> Lines of Business </strong></h3>
       <div class="row" id="MobiBrand">
         <div class="col-xs-6">
-          <a class="container-img" href="digital-banking-solutions.html"><img src="images\01a-Lineofbusiness.jpg"
+          <a class="container-img" href="digital-banking-solutions.html"><img src="images\01a-Lineofbusiness.png"
               alt="Digital Banking Solutions"></a>
         </div>
         <div class="col-xs-6">
-          <a class="container-img" href="digital-commerce-solutions.html"><img src="images\01b-Lineofbusiness.jpg"
+          <a class="container-img" href="digital-commerce-solutions.html"><img src="images\01b-Lineofbusiness.png"
               alt="Digital Commerce"></a>
         </div>
         <div class="col-xs-6">
-          <a class="container-img" href="data-engineering-suite.html"><img src="images\01c-Lineofbusiness.jpg"
+          <a class="container-img" href="data-engineering-suite.html"><img src="images\01c-Lineofbusiness.png"
               alt="Data Engineering Suite"></a>
         </div>
         <div class="col-xs-6">
-          <a class="container-img" href="application-management-services.html"><img src="images\01d-Lineofbusiness.jpg"
+          <a class="container-img" href="application-management-services.html"><img src="images\01d-Lineofbusiness.png"
               alt="APM"></a>
         </div>
       </div>
