--- a/join-logixal.html
+++ b/join-logixal.html
@@ -109,7 +109,7 @@
          <div class="row">
             <h2 class="text-blue text-center font28 mt2 mb3">Why Choose Logixal?</h2>
             <div class="col-xs-12 col-sm-4 col-md-4 mobile-mb">
-               <a href="#"><img src="images/JoinOurTeam-image-original.jpg" class="img-responsive center-block"></a>
+               <a href="#"><img src="images/WhyChooseLogixal.png" class="img-responsive center-block"></a>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 oracle-logixal">
                <p class="text-center-tablet">Logixal is associated with a 9 year old legacy and fortitude that comes
